2006-11-28  John W. Eaton  <jwe@octave.org>

	* mex.cc (mxArray_struct::get_field_by_number):
	Return 0 if key_num is out of range.
	(mxArray_struct::set_field_by_number):
	Do nothing if key_num is out of range.
	(mxArray_cell::get_cell, mxArray_cell::set_cell):
	Avoid out-of-bounds indexing

2006-11-28  Luis F. Ortiz  <lortiz@interactivesupercomputing.com>

	* mex.cc (mxArray_matlab::get_n, mxArray_octave_value::get_n):
	Return product of last N-1 dims.

2006-11-28  John W. Eaton  <jwe@octave.org>

	* lex.l (eat_whitespace): Also handle CRLF as EOL.

	* dirfns.cc (Fmkdir): Handle "mkdir (parent, dir)".

2006-11-21  John W. Eaton  <jwe@octave.org>

	* load-path.cc (load_path::do_find_file,
	load_path::do_find_first_of, load_path::do_find_all_first_of): 
	Call rooted_pathname instead of absolute_pathname.
	* utils.cc (fcn_file_in_path, oct_file_in_path, mex_file_in_path):
	Likewise.

2006-11-16  Michael Goffioul  <michael.goffioul@swing.be>

	* oct-hist.cc (default_history_file): Instead of appending
	"/.octave_hist", append directory separator (but only if
	necessary), then ".octave_hist".

2006-11-16  John W. Eaton  <jwe@octave.org>

	* data.cc (Fresize): Fix doc string.

2006-11-15  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/__gnuplot_raw__.l (write_data, write_inline_data):
	New functions.
	(save_in_tmp_file): Use write_data.
	(gnuplot::send_inline_data, gnuplot_do_send_inline_data):
	New functions.
	(F__gnuplot_send_inline_data__, F__gnuplot_save_data__):
	New functions.

	* ls-oct-ascii.cc (save_ascii_data_for_plotting):
	Call save_ascii_data with precision = 4.
	(save_three_d): Temporarily set precision to 4 for output stream.

2006-11-15  Michael Goffioul  <michael.goffioul@swing.be>

	* Cell.h (Cell): Tag class with OCTINTERP_API.

2006-11-13  John W. Eaton  <jwe@octave.org>

	* load-save.cc (find_file_to_load): New function.
	(Fload): Call find_file_to_load to search load path for file.

	* file-io.cc (Ffopen): Search load path for file.
